--- a/about.html
+++ b/about.html
@@ -342,6 +342,8 @@
                         <ul class="quick-links">
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="contact.html">Contact</a></li>
+                            <li><a href="locations.html">Service Locations</a></li>
+
 
                         </ul>
                     </div>
