--- a/index.html
+++ b/index.html
@@ -742,149 +742,6 @@
 
 
 
-    <!-- Start Case Studies Area -->
-    <!----
-    <div class="case-studies-area bg-f6f7fb pt-100">
-        <div class="container">
-            <div class="section-title-wrap">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <span>CASE STUDIES</span>
-                        <h2>Recent case studies on how we have helped our clients</h2>
-                    </div>
-
-                    <div class="col-lg-4">
-                        <div class="see-more-btn">
-                            <a href="/case-study/case-studies-details.html">See more cases</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="case-studies-slides-two owl-carousel owl-theme">
-                <div class="single-case-studies-box">
-                    <div class="row">
-                        <div class="col-lg-5">
-                            <div class="case-image"></div>
-                        </div>
-
-                        <div class="col-lg-7">
-                            <div class="case-content">
-                                <span>Web case</span>
-                                <h3>
-                                    <a href="case-studies-details.html">Cyber security solutions</a>
-                                </h3>
-                                <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit aliquet
-                                    elit eget tincidunt nibh pulvinar curabitur.</p>
-                                <a href="#" class="case-btn">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="single-case-studies-box">
-                    <div class="row">
-                        <div class="col-lg-5">
-                            <div class="case-image bg-2"></div>
-                        </div>
-
-                        <div class="col-lg-7">
-                            <div class="case-content">
-                                <span>Web case</span>
-                                <h3>
-                                    <a href="#">Custom web solutions</a>
-                                </h3>
-                                <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit aliquet
-                                    elit eget tincidunt nibh pulvinar curabitur.</p>
-                                <a href="#" class="case-btn">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="single-case-studies-box">
-                    <div class="row">
-                        <div class="col-lg-5">
-                            <div class="case-image bg-3"></div>
-                        </div>
-
-                        <div class="col-lg-7">
-                            <div class="case-content">
-                                <span>Web case</span>
-                                <h3>
-                                    <a href="#">Web case solutions</a>
-                                </h3>
-                                <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit aliquet
-                                    elit eget tincidunt nibh pulvinar curabitur.</p>
-                                <a href="#" class="case-btn">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="single-case-studies-box">
-                    <div class="row">
-                        <div class="col-lg-5">
-                            <div class="case-image bg-4"></div>
-                        </div>
-
-                        <div class="col-lg-7">
-                            <div class="case-content">
-                                <span>Web case</span>
-                                <h3>
-                                    <a href="#">UX case studies</a>
-                                </h3>
-                                <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit aliquet
-                                    elit eget tincidunt nibh pulvinar curabitur.</p>
-                                <a href="#" class="case-btn">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="single-case-studies-box">
-                    <div class="row">
-                        <div class="col-lg-5">
-                            <div class="case-image bg-5"></div>
-                        </div>
-
-                        <div class="col-lg-7">
-                            <div class="case-content">
-                                <span>Web case</span>
-                                <h3>
-                                    <a href="#">IT system improvements</a>
-                                </h3>
-                                <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit aliquet
-                                    elit eget tincidunt nibh pulvinar curabitur.</p>
-                                <a href="#" class="case-btn">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="single-case-studies-box">
-                    <div class="row">
-                        <div class="col-lg-5">
-                            <div class="case-image bg-6"></div>
-                        </div>
-
-                        <div class="col-lg-7">
-                            <div class="case-content">
-                                <span>Web case</span>
-                                <h3>
-                                    <a href="#">Digital marketing solutions</a>
-                                </h3>
-                                <p>Curabitur arcu erat accumsan id imperdiet et porttitor at sem. Mauris blandit aliquet
-                                    elit eget tincidunt nibh pulvinar curabitur.</p>
-                                <a href="#" class="case-btn">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- End Case Studies Area -->
 
     <!-- Start Footer Area -->
     <footer class="footer-area">
@@ -912,6 +769,7 @@
                         <ul class="quick-links">
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="contact.html">Contact</a></li>
+                            <li><a href="locations.html">Service Locations</a></li>
 
                         </ul>
                     </div>
