--- a/portfolio.html
+++ b/portfolio.html
@@ -310,6 +310,8 @@
                         <ul class="quick-links">
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="contact.html">Contact</a></li>
+                            <li><a href="locations.html">Service Locations</a></li>
+
                         </ul>
                     </div>
                 </div>
