--- a/locations.html
+++ b/locations.html
@@ -191,18 +191,18 @@
             <div class="col col-lg-12 pt-5">
                 <h2>Areas We Service</h2>
 
-                <h5><a href="website-design-melbourne.html">- Melbourne</a></h5>
-                <h5><a href="website-design-perth.html">- Perth</a></h5>
-                <h5><a href="website-design-perth.html">- Sydney</a></h5>
+                <h5><a href="/landing/website-design-melbourne.html">- Melbourne</a></h5>
+                <h5><a href="/landing/website-design-perth.html">- Perth</a></h5>
+                <h5><a href="/landing/website-design-perth.html">- Sydney</a></h5>
 
                 <ul style="margin-top:15px;">
 
-                    <li for=""><a href="website-design-Epping.html">Epping</a></li>
-                    <li for=""><a href="website-design-Eltham.html">Eltham</a></li>
-                    <li for=""><a href="website-design-Doncaster.html">Doncaster</a></li>
-                    <li for=""><a href="website-design-diamond-creek.html">Diamond Creek</a></li>
-                    <li for=""><a href="website-design-Mernda.html">Mernda</a></li>
-                    <li for=""><a href="website-design-south-morang.html">South Morang</a></li>
+                    <li for=""><a href="/landing/website-design-Epping.html">Epping</a></li>
+                    <li for=""><a href="/landing/website-design-Eltham.html">Eltham</a></li>
+                    <li for=""><a href="/landing/website-design-Doncaster.html">Doncaster</a></li>
+                    <li for=""><a href="/landing/website-design-diamond-creek.html">Diamond Creek</a></li>
+                    <li for=""><a href="/landing/website-design-Mernda.html">Mernda</a></li>
+                    <li for=""><a href="/landing/website-design-south-morang.html">South Morang</a></li>
                 </ul>
             </div>
         </div>
