--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <i class="flaticon-consulting"></i>
                     </div>
                     <h3>
-                        <a href="services-details.html">Mobile-First Design</a>
+                        <a href="#">Mobile-First Design</a>
                     </h3>
                     <p>We focus on building your site for mobile devices first, then we scale it out to make it looks
                         great on tablet and desktop. </p>
@@ -257,7 +257,7 @@
                         <i class="flaticon-product-design"></i>
                     </div>
                     <h3>
-                        <a href="services-details.html">Fully Responsive</a>
+                        <a href="#">Fully Responsive</a>
                     </h3>
                     <p>Your website will fit all mobile screens sizes, tablets, and desktop sizes so new clients can
                         access your site from anywhere on any device.
@@ -270,7 +270,7 @@
                         <i class="flaticon-technical-support"></i>
                     </div>
                     <h3>
-                        <a href="services-details.html">SEO Optimized</a>
+                        <a href="#">SEO Optimized</a>
                     </h3>
                     <p>Let us take care of your on-site SEO with in built caching, image optimisation and clean code
                         that is friendly to web crawlers.</p>
@@ -281,7 +281,7 @@
                         <i class="flaticon-cyber-security"></i>
                     </div>
                     <h3>
-                        <a href="services-details.html">Blazingly Quick</a>
+                        <a href="#">Blazingly Quick</a>
                     </h3>
                     <p>We guarentee a PageSpeed Insights score of 90+ across Mobile and Desktop devices.This basically
                         means lightning fast! </p>
@@ -293,7 +293,7 @@
                         <i class="flaticon-mobile-app"></i>
                     </div>
                     <h3>
-                        <a href="services-details.html">Google Analytics</a>
+                        <a href="#">Google Analytics</a>
                     </h3>
                     <p>Keep an eye on whos on your website? We install Google Analytics for free to monitor
                         traffic and where it comes from.</p>
@@ -305,7 +305,7 @@
                         <i class="flaticon-web-development"></i>
                     </div>
                     <h3>
-                        <a href="services-details.html">Web Development</a>
+                        <a href="#">Web Development</a>
                     </h3>
                     <p>Need a new POC? New form or custom front-end? We'll build it from the ground up with industry
                         leading frameworks such as Vue and NuxtJS </p>
@@ -317,7 +317,7 @@
                         <i class="flaticon-digital-marketing"></i>
                     </div>
                     <h3>
-                        <a href="services-details.html">API's & Cloud</a>
+                        <a href="#">API's & Cloud</a>
                     </h3>
                     <p>Connect and automate your workflows with API integrations built on top of proven cloud providers
                         such as AWS and GCP.</p>
