--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="col-lg-6 col-md-12" data-aos="fade-left" data-aos-delay="50" data-aos-duration="500"
                     data-aos-once="true">
                     <div class="main-banner-image" data-speed="0.02" data-revert="true">
-                        <img src="assets/images/main-banner/HERO-PIC2.png" alt="image">
+                        <img src="assets/images/main-banner/hero-banner.webp" alt="image">
 
                         <div class="main-banner-shape-3" data-speed="0.08" data-revert="true">
                             <img src="assets/images/main-banner/shape-2.png" alt="image">
@@ -240,7 +240,7 @@
             </div>
 
             <div class="services-slides owl-carousel owl-theme">
-                <div class="single-services-card bg-f9fafb bg-image">
+                <div class="single-services-card bg-f9fafb ">
                     <div class="icon">
                         <i class="flaticon-consulting"></i>
                     </div>
@@ -252,7 +252,7 @@
 
                 </div>
 
-                <div class="single-services-card bg-f9fafb bg-image">
+                <div class="single-services-card bg-f9fafb ">
                     <div class="icon">
                         <i class="flaticon-product-design"></i>
                     </div>
@@ -265,7 +265,7 @@
 
                 </div>
 
-                <div class="single-services-card bg-f9fafb bg-image">
+                <div class="single-services-card bg-f9fafb ">
                     <div class="icon">
                         <i class="flaticon-technical-support"></i>
                     </div>
@@ -276,7 +276,7 @@
                         that is friendly to web crawlers.</p>
                 </div>
 
-                <div class="single-services-card bg-f9fafb bg-image">
+                <div class="single-services-card bg-f9fafb ">
                     <div class="icon">
                         <i class="flaticon-cyber-security"></i>
                     </div>
@@ -288,7 +288,7 @@
 
                 </div>
 
-                <div class="single-services-card bg-f9fafb bg-image">
+                <div class="single-services-card bg-f9fafb ">
                     <div class="icon">
                         <i class="flaticon-mobile-app"></i>
                     </div>
@@ -300,7 +300,7 @@
 
                 </div>
 
-                <div class="single-services-card bg-f9fafb bg-image">
+                <div class="single-services-card bg-f9fafb ">
                     <div class="icon">
                         <i class="flaticon-web-development"></i>
                     </div>
@@ -312,7 +312,7 @@
 
                 </div>
 
-                <div class="single-services-card bg-f9fafb bg-image">
+                <div class="single-services-card bg-f9fafb ">
                     <div class="icon">
                         <i class="flaticon-digital-marketing"></i>
                     </div>
@@ -335,7 +335,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-12">
                     <div class="about-image bg-bottom" data-speed="0.02" data-revert="true">
-                        <img src="assets/images/about/nopayment.png" alt="image">
+                        <img src="assets/images/about/NoPayment.webp" alt="image">
 
                         <div class="image-shape-1" data-speed="0.08" data-revert="true">
                             <img src="assets/images/about/shape-1.png" alt="image">
@@ -494,8 +494,8 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="choose-us-image" data-speed="0.02" data-revert="true">
                         <img style="max-height:690px; max-width:670px; border-radius:50%;"
-                            src="assets/images/small_business_LG.jpg"
-                            srcset="assets/images/small_business_LG.jpg 490w, assets/images/small_business_SM.jpg 250w"
+                            src="assets/images/small_business_LG.webp"
+                            srcset="assets/images/small_business_LG.webp 490w, assets/images/small_business_SM.jpg 250w"
                             alt="image">
 
                         <div class="image-shape-1" data-speed="0.08" data-revert="true">
