--- a/services.html
+++ b/services.html
@@ -168,7 +168,7 @@
 
             <div class="row justify-content-center">
                 <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb bg-image">
+                    <div class="single-services-card bg-f9fafb ">
                         <div class="icon">
                             <i class="flaticon-product-design"></i>
                         </div>
@@ -184,7 +184,7 @@
 
                 <div class="col-lg-3 col-md-6">
 
-                    <div class="single-services-card bg-f9fafb bg-image">
+                    <div class="single-services-card bg-f9fafb ">
                         <div class="icon">
                             <i class="flaticon-technical-support"></i>
                         </div>
@@ -197,7 +197,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb bg-image">
+                    <div class="single-services-card bg-f9fafb ">
                         <div class="icon">
                             <i class="flaticon-cyber-security"></i>
                         </div>
@@ -213,7 +213,7 @@
 
                 <div class="col-lg-3 col-md-6">
 
-                    <div class="single-services-card bg-f9fafb bg-image">
+                    <div class="single-services-card bg-f9fafb ">
                         <div class="icon">
                             <i class="flaticon-mobile-app"></i>
                         </div>
@@ -227,7 +227,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb bg-image">
+                    <div class="single-services-card bg-f9fafb ">
                         <div class="icon">
                             <i class="flaticon-web-development"></i>
                         </div>
@@ -241,7 +241,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <div class="single-services-card bg-f9fafb bg-image">
+                    <div class="single-services-card bg-f9fafb ">
                         <div class="icon">
                             <i class="flaticon-solution"></i>
                         </div>
