--- a/case-study/case-studies-details.html
+++ b/case-study/case-studies-details.html
@@ -336,7 +336,7 @@
                             aliqua.</p>
                         <ul class="footer-widget-social">
                             <li><span>Follow us:</span></li>
-                            <li><a href="https://www.facebook.com/" target="_blank"><i class="ri-facebook-line"></i></a>
+                            <li><a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank"><i class="ri-facebook-line"></i></a>
                             </li>
                             <li><a href="https://twitter.com/" target="_blank"><i class="ri-twitter-fill"></i></a></li>
                             <li><a href="https://www.instagram.com/" target="_blank"><i
