--- a/landing/website-design-sydney.html
+++ b/landing/website-design-sydney.html
@@ -159,7 +159,7 @@
 
                         <ul class="main-banner-social">
                             <li>
-                                <a href="https://www.facebook.com/" target="_blank">
+                                <a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank">
                                     <i class="ri-facebook-line"></i>
                                 </a>
                             </li>
@@ -807,7 +807,8 @@
 
                         <ul class="footer-widget-social">
                             <li><span>Follow us:</span></li>
-                            <li><a href="https://www.facebook.com/" target="_blank"><i class="ri-facebook-line"></i></a>
+                            <li><a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank"><i
+                                        class="ri-facebook-line"></i></a>
                             </li>
 
                         </ul>
@@ -850,7 +851,7 @@
     <!-- End Go Top -->
 
     <!-- Links of JS files -->
-    <!---- <script src="../assets/js/jquery.min.js"></script> -->
+    <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/jquery.meanmenu.js"></script>
     <script src="../assets/js/owl.carousel.min.js"></script>
