--- a/services.html
+++ b/services.html
@@ -204,9 +204,8 @@
                         <h3>
                             <a href="#">Blazingly Quick</a>
                         </h3>
-                        <p>We guarentee a PageSpeed Insights score of 90+ across Mobile and Desktop devices.This
-                            basically
-                            means lightning fast! </p>
+                        <p>Custom code means super quick websites! Our code is
+                            light-weight and rigorously optimized resulting in better performance.</p>
 
                     </div>
                 </div>
@@ -396,7 +395,7 @@
 
                         <ul class="footer-widget-social">
                             <li><span>Follow us:</span></li>
-                            <li><a href="https://www.facebook.com/" target="_blank"><i class="ri-facebook-line"></i></a>
+                            <li><a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank"><i class="ri-facebook-line"></i></a>
                             </li>
 
                         </ul>
