fix contact links

--- a/landing/website-design-diamond-creek.html
+++ b/landing/website-design-diamond-creek.html
@@ -71,7 +71,8 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="../index.html">
-                        <img style="max-width:250px; max-height:150px;" src="../assets/images/SWS_LIGHT.webp" alt="logo">
+                        <img style="max-width:250px; max-height:150px;" src="../assets/images/SWS_LIGHT.webp"
+                            alt="logo">
                     </a>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
@@ -806,7 +807,8 @@
 
                         <ul class="footer-widget-social">
                             <li><span>Follow us:</span></li>
-                            <li><a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank"><i class="ri-facebook-line"></i></a>
+                            <li><a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank"><i
+                                        class="ri-facebook-line"></i></a>
                             </li>
 
                         </ul>
