--- a/landing/website-design-epping.html
+++ b/landing/website-design-epping.html
@@ -71,7 +71,8 @@
             <div class="container">
                 <nav class="navbar navbar-expand-md navbar-light">
                     <a class="navbar-brand" href="../index.html">
-                        <img style="max-width:250px; max-height:150px;" src="../assets/images/SWS_LIGHT.webp" alt="logo">
+                        <img style="max-width:250px; max-height:150px;" src="../assets/images/SWS_LIGHT.webp"
+                            alt="logo">
                     </a>
 
                     <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
@@ -91,7 +92,7 @@
                                 <a href="../portfolio.html" class="nav-link">Recent Work</a>
                             </li>
                             <li class="nav-item">
-                                <a href="../contact.html" class="nav-link">../contact</a>
+                                <a href="../contact.html" class="nav-link">Contact</a>
                             </li>
 
 
@@ -152,7 +153,7 @@
                             quick websites! </p>
 
                         <ul class="banner-btn">
-                            <li><a href="../contact.html" class="default-btn border-radius">../contact</a></li>
+                            <li><a href="../contact.html" class="default-btn border-radius">Contact</a></li>
                             <!----     <li><a href="appointment.html" class="optional-btn border-radius">../contact</a></li> -->
                         </ul>
 
@@ -341,7 +342,7 @@
                         </div>
 
                         <div class="about-btn">
-                            <a href="../contact.html" class="default-btn border-radius">../contact Us</a>
+                            <a href="../contact.html" class="default-btn border-radius">Contact</a>
                             <a href="tel:61413864377" class="phone-number"><i class="ri-phone-fill"></i> +61 413 864
                                 377</a>
                         </div>
@@ -435,7 +436,7 @@
 
                         <ul class="features-list">
                             <li><i class="ri-check-line"></i> Single Landing Page</li>
-                            <li><i class="ri-check-line"></i> ../contact Form</li>
+                            <li><i class="ri-check-line"></i> Contact Form</li>
                             <li><i class="ri-check-line"></i> Great for CV's or Landing Pages</li>
                             <li><i class="ri-check-line"></i> 24/7 email support</li>
                             <li><i class="ri-check-line"></i> Included Hosting</li>
@@ -457,7 +458,7 @@
 
                         <ul class="features-list">
                             <li><i class="ri-check-line"></i> 5 Page Website Development</li>
-                            <li><i class="ri-check-line"></i> ../contact Forms</li>
+                            <li><i class="ri-check-line"></i> Contact Forms</li>
                             <li><i class="ri-check-line"></i> Quality & customer experience</li>
                             <li><i class="ri-check-line"></i> Included Hosting</li>
                             <li><i class="ri-check-line"></i> Unlimited Revisions</li>
@@ -614,7 +615,7 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="appointment-form-wrap bg-2f3045">
                         <div class="content">
-                            <h3>../contact Us</h3>
+                            <h3>Contact Us</h3>
                         </div>
 
                         <form class="appointment-form" name="Home_../contact" data-netlify="true">
@@ -806,7 +807,8 @@
 
                         <ul class="footer-widget-social">
                             <li><span>Follow us:</span></li>
-                            <li><a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank"><i class="ri-facebook-line"></i></a>
+                            <li><a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank"><i
+                                        class="ri-facebook-line"></i></a>
                             </li>
 
                         </ul>
@@ -827,7 +829,7 @@
 
                 <div class="col-lg-4 col-sm-6">
                     <div class="single-footer-widget">
-                        <h3>../contact info</h3>
+                        <h3>Contact info</h3>
 
                         <ul class="footer-information">
                             <li><span>Phone : </span><a href="tel:+61413864377">61 413 864 377</a></li>
@@ -863,7 +865,7 @@
     <script src="../assets/js/aos.js"></script>
     <script src="../assets/js/jquery.ajaxchimp.min.js"></script>
     <script src="../assets/js/form-validator.min.js"></script>
-    <script src="../assets/js/../contact-form-script.js"></script>
+    <script src="../assets/js/contact-form-script.js"></script>
     <script src="../assets/js/wow.min.js"></script>
     <script src="../assets/js/main.js"></script>
 </body>
