--- a/landing/website-for-tradies.html
+++ b/landing/website-for-tradies.html
@@ -164,11 +164,6 @@
                                 </a>
                             </li>
 
-                            <li>
-                                <a href="https://www.instagram.com/" target="_blank">
-                                    <i class="ri-instagram-line"></i>
-                                </a>
-                            </li>
 
 
                         </ul>
@@ -206,8 +201,8 @@
         <div class="container">
             <div class="section-title">
                 <span>SERVICES</span>
-                <h3>Need A Website For Your Business In Sydney?</h3>
-                <p>Simply Web Solutions services Sydney and surrounding areas.</p>
+                <h3>We build websites tailored to local tradies!</h3>
+                <p>Simply Web Solutions services tradies and other small business all across Australia.</p>
             </div>
 
             <div class="services-slides owl-carousel owl-theme">
@@ -324,7 +319,7 @@
                             </span> Per Month, No Minimum Contract</h3>
                         <p>Our innovative business model lets you start building your digital footprint today. $0
                             Upfront for a standard 5 page small business website. We'll handle development,hosting,
-                            updates and uptime monitoring so you can get on with your business.</p>
+                            updates and uptime monitoring so you can get back on the tools.</p>
                         <br>
                         <p>You own your domain, content, listing, and profiles. Cancel anytime with no fees or hassle.
                         </p>
@@ -365,7 +360,8 @@
                     <div class="choose-us-content margin-zero" data-speed="0.02" data-revert="true">
                         <span>WHY CHOOSE US</span>
                         <h3>Big Results For Small Business</h3>
-                        <p>We've spoken to small business owners and listened. It can be difficult for any new or
+                        <p>We've spoken to small business owners and individual trade contractors. It can be difficult
+                            for any new or
                             existing
                             small business to find thousands of dollars upfront to purchase a new website they don't
                             know will deliver. This leaves them in a tricky situation where they either can't afford a
@@ -381,7 +377,7 @@
                             <div class="icon">
                                 <i class="flaticon-technical-support-1"></i>
                             </div>
-                            <h4>Customer Service</h4>
+                            <h4>Australian Customer Service</h4>
                             <p>Based in Australia, we're right around the corner when you need us. Unlimited edits and
                                 managed content is one of the great benefits of our solution. </p>
                         </div>
@@ -402,10 +398,8 @@
 
                 <div class="col-lg-6 col-md-12">
                     <div class="choose-us-image" data-speed="0.02" data-revert="true">
-                        <img style="max-height:690px; max-width:670px; border-radius:50%;"
-                            src="../assets/images/small_business_LG.webp"
-                            srcset="../assets/images/small_business_LG.webp 490w, ../assets/images/small_business_SM.jpg 250w"
-                            alt="image">
+                        <img style="max-height:690px; max-width:670px; border-radius:0%;margin-left:25px;"
+                            src="../assets/images/happy_tradie.webp" alt="image">
 
                         <div class="image-shape-1" data-speed="0.08" data-revert="true">
                             <img src="../assets/images/choose/shape-1.png" alt="image">
