--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         </p>
 
                         <div class="row">
-                            <div class="col-lg-6 col-sm-6 col-md-6 col-6">
+                            <div class="col-lg-12">
                                 <div class="inner-content-box">
                                     <h4>Our mission</h4>
                                     <p>We believe in powering small business' across Australia by providing great
