--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <link rel="stylesheet" href="assets/css/fancybox.min.css">
     <link rel="stylesheet" href="assets/css/selectize.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/navbar.css">
+    <!----  <link rel="stylesheet" href="assets/css/navbar.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">  -->
 
     <title>Simply Web Solutions - Web Design for Small Business</title>
 
