--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,7 @@
     gtag('js', new Date());
 
     gtag('config', 'G-0CW3XE8XPM');
+    gtag('config', 'AW-795834801');
 </script>
 
 <body>
@@ -296,7 +297,8 @@
 
                         <ul class="footer-widget-social">
                             <li><span>Follow us:</span></li>
-                            <li><a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank"><i class="ri-facebook-line"></i></a>
+                            <li><a href="https://www.facebook.com/profile.php?id=100086491727282" target="_blank"><i
+                                        class="ri-facebook-line"></i></a>
                             </li>
 
                         </ul>
