--- a/index.html
+++ b/index.html
@@ -644,8 +644,8 @@
                                 <div id="collapseFour" class="accordion-collapse collapse"
                                     data-bs-parent="#FaqAccordion">
                                     <div class="accordion-body">
-                                        <p>Our billing method is simple - A fixed price at the start of every month
-                                            according to your plan.
+                                        <p>Our billing method works just like any other subscription. Pay a fixed price
+                                            every day of the month - no less, no more.
                                         </p>
                                     </div>
                                 </div>
