lazy load image

--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 
 
     <!-- Start Footer Area -->
-    <footer class="footer-area">
+    <footer id="bg-image" class="footer-area">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-sm-6">
@@ -827,6 +827,7 @@
         gtag('config', 'G-0CW3XE8XPM');
         gtag('config', 'AW-795834801');
     </script>
+
 </body>
 
 </html>
